# student-management-system

./: .gitignore  app.spec  default.sql  pyproject.toml
src/: config.py  const.py  main.py  utils.py
src/database/: __init__.py  db_config.py  default.sql  manager.py
src/database/models/: __init__.py  award.py  class_.py  club.py  college.py  course.py  course_enrollment.py  course_enrollments.py  course_teacher.py  exam.py  grade.py  major.py  scholarship.py  student.py  student_club.py  student_status.py  system_account.py  teacher.py  tearcher.py  tearchers.py
src/ui/: __init__.py  login_window.py  user_window.py  window_manager.py
src/ui/admin/: common.py  page.py  window.py
src/ui/admin/controllers/: _base.py  account.py  class_.py  college.py  course.py  major.py  student.py
src/ui/admin/pages/: __init__.py  account.py  class_.py  college.py  course.py  major.py  student.py
src/ui/admin/tabs/: __init__.py  _base.py  class_.py  college.py  course.py  major.py  student.py
src/ui/common/: page.py  readonly_table.py  selection.py  user_window.py
src/ui/dialog/: about.py  password.py  settings.py
src/ui/student/: page.py  window.py
src/ui/student/pages/: __init__.py  account.py  award.py  club.py  course.py  exam.py  grade.py  info.py  scholarship.py
src/ui/teacher/: window.py
src/ui/teacher/pages/: __init__.py  course.py  grade.py
